# bedrock-k

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
aws_management/src/services/: bedrock_ops.py  conf_ops.py  s3_ops.py
aws_management/tests/: py_assert.py  test_bedrock.py  test_conf.py  test_ident_center.py  test_s3.py
