[tool.poetry]
name = "bedrock-k"
version = "0.1.0"
description = ""
authors = ["KiloJon <social@kjon.life>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
moto = "^5.0.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
